--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ html, body {
 header {
   background: #f3efe7;
   padding:10px;
+  border-bottom: solid 1px #c2c0be;
 }
 
 nav {
@@ -27,6 +28,7 @@ nav {
 }
 
 nav #nav-brand {
+	color: black;
 	margin-top: -5px;
 	margin-left: 22px;
 	font-size: 30px;
@@ -36,19 +38,19 @@ nav #nav-brand {
 nav #nav {
 	position: relative;
 	width: 600px;
-	right: -300px;
+	right: -310px;
 
 }
 
 nav #nav li {
 	display: inline-block;
 	color: #396494;
-	letter-spacing: 1.5px;
+	letter-spacing: 1px;
 	font-size: 24px;
 }
 
 nav #nav a {
-	padding-right: 20px;
+	padding-right: 30px;
 	text-decoration: none;
 }
 
@@ -79,6 +81,7 @@ nav #nav a {
 }
 
 #kicker {
+	color: #943964;
 	font-style: italic;
 	letter-spacing: 2px;
 }
@@ -115,6 +118,8 @@ footer {
   height: 60px;   /* Height of the footer */
   background: #f3efe7;
   text-align: center;
+  border-top: solid 1px #c2c0be;
+
 }
 
 footer p {
