Add nav animations

--- a/css/main.css
+++ b/css/main.css
@@ -145,3 +145,7 @@ footer p {
 	background: url("../img/email_nav.png") no-repeat;
 	display: none;
 }
+#preload5 {
+	background: url("../img/nav_nav.png") no-repeat;
+	display: none;
+}
